2004-05-04	blytkerchan
	* development.html: update the current status of development

2004-04-23	blytkerchan
	* libcontain_down.html: bump current version to 0.1-alpha2, mention the bugfixes and add the download link.

2004-04-19	blytkerchan
	* design.html: link to CSS in css/ and images in images/
	* development.html: ditto
	* download.html: ditto
	* empty.html: ditto
	* empty_dev.html: ditto
	* empty_down.html: ditto
	* empty_lang.html: ditto
	* goals.html: ditto
	* how_you_can_help.html: ditto
	* index.html: ditto
	* jailop.html: ditto
	* jailtype.html: ditto
	* language.html: ditto
	* license.html: ditto
	* menu.html: ditto
	* progress.html: ditto
	* table.html: ditto
	* table_dev.html: ditto
	* table_down.html: ditto
	* table_lang.html: ditto
	* tech_arch.html: ditto
	* libcontain_down.html: ditto
	update text for version 0.1-alpha1 of libcontain
	add links for downloads of available versions
	
2004-04-08	blytkerchan
	* ChangeLog: rectify date of previous change
	* *.pl: move to ../cgi-bin
	* images: new directory
	* css: ditto
	* sql: ditto
	* *.png: move to new images directory
	* *.xcf: ditto
	* *.css: move to new css directory
	* *.sql: move to new sql directory

2004-02-09	blytkerchan
	* index.html: add (funny) publicity banner
	* menu.html: add download section

2004-02-06	blytkerchan
	* libcontain_down.html: add words on current and future versions

	* jail-banner.xcf: new file
	* banners/banner1.xcf: ditto
	* banners/banner1.png: ditto

2004-02-05	blytkerchan
	* libcontain_down.html: add words on current version

	* libcontain_down.html: new file
	* table_down.html: add reference to libcontain_down.html
	repair targets of all links

	* download.html: add words on versions and concluding remark

2004-02-04	blytkerchan
	* empty_down.html: new file
	* table_down.html: ditto
	* download.html: ditto

2004-02-03	blytkerchan
	* empty_dev.html, empty_lang.html: new files

2004-02-02	blytkerchan
	* ChangeLog: correct dates