@@ -1,0 +1,57 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+<title>JAIL: Just Another Interpreted Language</title>
+<meta http-equiv="content-type" content=
+"text/html; charset=us-ascii">
+</head>
+<body>
+<link href="css/jail.css" rel=stylesheet type="text/css"/>
+<a name="top"/>
+<div align="center"><img src="images/jail-banner.png" alt=
+"Just Another Interpreted Language">
+</div>
+<iframe src="menu.html" type="text/html" width="100%" height="50" frameborder=0 scrolling="no">
+<p>The menu should be here..</p>
+</iframe>
+<table style="width: 100%"> 
+<tbody>
+<tr>
+<td style="width: 20%;" valign="top">
+<iframe src="table_down.html" type="text/html" width="100%" height="800" frameborder=0>
+<p>The TOC should be here..</p>
+</iframe>
+</td>
+<td valign="top">
+<div align="justify">
+<h1>The Jail-Ust Memory Management Library</h1>
+<p>The libmemory library provides an implementation of M.M. Micheal's Safe Memory Reclamation algorithm in C.</p>
+<p>The Safe Memory Reclamation algorithm provides a convenient way to get rid of the so-called ABA problem in which a value changes from A to B back to A between reads. If, for example, the value you're reading is a pointer and the memory to which it points is freed and re-allocated between two reads, what you do with the memory it points to in that time may result in mayhem. The SMR algorithm prevents this by registering a "hazardous reference" to then pointer thus preventing the memory from being reclaimed while a reference exists.</p>
+<p>The implementation is designed to fully implement the SMR algorithm without restricting the user to provide such information as the maximum number of threads used by the application or the batch size used by the algorithm. It will run on any POSIX-compliant platform and uses the POSIX threads API for thread-local storage. It should, however, be a trivial effort to port this library to Windows.</p>
+</div>
+</td>
+<td style="width: 20%;" valign="top">
+<!--  RIGHT-HAND SIDE TEXT HERE -->
+<p>
+<h2>Download</h2>
+<a href="http://prdownloads.sourceforge.net/jail-ust/libmemory-0.0-alpha1.tar.gz?download">Version 0.0-alpha1</a><br/>
+</p>
+</td>
+</tr>
+</tbody>
+</table>
+<table width="100%">
+<tbody>
+<tr>
+<td style="vertical-align: bottom; text-align: left; font-size: smaller;">This site is hosted by:<br/>
+<a href=
+"http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
+width="210" height="62" border="0" align="right" alt=
+"SourceForge.net Logo"></a>
+</td><td style="vertical-align: bottom; text-align: right; font-size: smaller;">
+<a href="#top">back to top</a><br/>
+This page was last updated: $Date: 2004/05/10 16:06:29 $
+</td></tr></tbody></table>
+</body>
+</html>
