@@ -22,6 +22,9 @@ class="toc">
 <td valign="top"><a class="toc" href="libcontain_down.html" target="_top">libcontain: the container library</a></td>
 </tr>
 <tr>
+<td valign="top"><a class="toc" href="libmemory_down.html" target="_top">libmemory: the memory management library</a></td>
+</tr>
+<tr>
 <td valign="top"><a class="toc" href="http://sourceforge.net/projects/jail-ust" target="_top">SourceForge
 project page</a></td>
 </tr>
